Revision history for Perl extension Net::SSH2.

0.46  2012-11-10 01:33:14
        - patch from Robert-Jean Denault (Robert-jean.Denault@telus.com) to fix
          segfault when releasing sftp object in debug mode

0.45  2012-05-27 09:18:49
        - add 64bit instructions to BUILDING.WIN32 and clarify some things

0.44  2012-04-25 16:27:55
        - update to latest ppport.h
        - fix memory leak in password auth (RT#76701) (salva)

0.43  2012-04-24 07:47:21
        - correct fix for (RT#73659) (remove inc=/lib= from @ARGV)
        - add BUILDING.WIN32 guide for building on Windows from scratch

0.42  2012-04-19 14:05:44
        - add LD_RUN_PATH/LD_LIBRARY_PATH to search paths (RT#74747)
        - fix order of search paths for libs/includes

0.41  2012-04-18 22:12:07
        - fix missing -I for include directory with inc= option to Makefile.PL
          (RT#73659)

0.40  2011-10-23 18:41:17
        - add ssh-agent support (krimdomu)

0.39  2011-07-17 18:24:30
        - fix double free in auth_password (RT#69444)

0.38  2011-06-02 14:52:30
        - add version check for block_directions

0.37  2011-06-02 14:34:26
        - update ppport.h
        - use correct libssh2 version check for exit_signal support

0.36  2011-05-27 21:28:00
        - allow setting lib and inc paths on the command line (salva)

0.35  2011-05-10 17:43:17
        - fix for segfault due to auth_list() (RT#68060)

0.34  2011-05-07 08:34:35
        - fix trace option to ->new
        - handle partial writes for scp_put
        - add $chan->exit_signal (patch from tommy.lindgren@gmail.com)
        - add $ssh->block_directions
        - add new constants (socket, trace and ERROR_EAGAIN)

0.33  2010-07-13 07:59:22
        - change trace option to use bitmask, so it becomes trace => -1, also
          added ->trace method

0.32  2010-07-13 07:47:12
        - add trace => 1 option to ->new (RT#59292)

0.31  2010-06-13 09:35:38
        - remove eval $VERSION, was confusing some testers
