@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - support for building with libgcrypt (pass gcrypt to Makefile.PL)
+          (pullreq from James Mccoy: jamessan)
+
 0.46  2012-11-10 01:33:14
         - patch from Robert-Jean Denault (Robert-jean.Denault@telus.com) to fix
           segfault when releasing sftp object in debug mode
